--- a/piaofanzi/mobile/less/index.less
+++ b/piaofanzi/mobile/less/index.less
@@ -40,7 +40,7 @@ body {
     	bottom: 0;
     	background-position: center top;
     	background-repeat: no-repeat;
-    	background-size: 80% auto;
+    	background-size: auto 100%;
     }
 }
 
