--- a/piaofanzi/less/index.less
+++ b/piaofanzi/less/index.less
@@ -13,331 +13,344 @@
 @intro-anim-distance: 500px;
 
 html, body {
-	height: 100%;
-	font-size: 12px;
-	font-family: Helvetica, Tahoma, Arial, "Microsoft YaHei", "Hiragino Sans GB", "Hiragino Sans GB W3", STXihei, STHeiti, Heiti, SimSun, sans-serif;
+    height: 100%;
+    width: 100%;
+    font-size: 12px;
+    font-family: Helvetica, Tahoma, Arial, "Microsoft YaHei", "Hiragino Sans GB", "Hiragino Sans GB W3", STXihei, STHeiti, Heiti, SimSun, sans-serif;
 }
 .main {
-	height: 100%;
+    height: 100%;
+    width: 100%;
+    position: relative;
 }
+
+#fullPage {
+    width: 100%;
+    height: 100%;
+}
+
 #page1 {
-	height: 100%;
-	.focus {
-		height: 100%;
-		position: relative;
-	}
-	.bg-container {
-		height: 100%;
-		.bg {
-			position: relative;
-			overflow: hidden;
-			width: 100%;
-			.mover {
-				position: absolute;
-				height: 100%;
-				img {
-					float: left;
-					display: block;
-					width: auto;
-					height: 100%;
-					border: 0;
-					vertical-align: top;
-				}
-			}
-		}
-		.bg-1, .bg-2, .bg-3 {
-			height: 26%;
-		}
-		.bg-4 {
-			height: 22%;
-		}
-	}
-	.content-left, .content-right {
-		position: absolute;
-		top: 50%;
-	}
-	.content-left {
-		right: 50%;
-		height: @content-left-height;
-		margin-top: -@content-left-height / 2;
-		margin-right: 25px;
-		.phone1 {
-			height: 100%;
-			width: auto;
-		}
-	}
-	.content-right {
-		left: 50%;
-		width: 480px;
-		height: @content-right-height;
-		margin-top: -@content-right-height / 2;
-	}
-	.slogan {
-		width: 492px;
-		height: 258px;
-		background: url(../images/slogan.png);
-	}
-	.btn-group {
-		height: 160px;
-		margin-top: 70px;
-		padding-left: 35px;
-	}
-	.qrcode {
-		display: block;
-		width: 160px;
-		height: 160px;
-		float: left;
-		margin-right: 40px;
-	}
+    .focus {
+        height: 100%;
+        position: relative;
+    }
+    .bg-container {
+        height: 100%;
+        .bg {
+            position: relative;
+            overflow: hidden;
+            width: 100%;
+            .mover {
+                position: absolute;
+                height: 100%;
+                img {
+                    float: left;
+                    display: block;
+                    width: auto;
+                    height: 100%;
+                    border: 0;
+                    vertical-align: top;
+                }
+            }
+        }
+        .bg-1, .bg-2, .bg-3 {
+            height: 26%;
+        }
+        .bg-4 {
+            height: 22%;
+        }
+    }
+    .content-left, .content-right {
+        position: absolute;
+        top: 50%;
+    }
+    .content-left {
+        right: 50%;
+        height: @content-left-height;
+        margin-top: -@content-left-height / 2;
+        margin-right: 25px;
+        .phone1 {
+            height: 100%;
+            width: auto;
+        }
+    }
+    .content-right {
+        left: 50%;
+        width: 480px;
+        height: @content-right-height;
+        margin-top: -@content-right-height / 2;
+    }
+    .slogan {
+        width: 492px;
+        height: 258px;
+        background: url(../images/slogan.png);
+    }
+    .btn-group {
+        height: 160px;
+        margin-top: 70px;
+        padding-left: 35px;
+    }
+    .qrcode {
+        display: block;
+        width: 160px;
+        height: 160px;
+        float: left;
+        margin-right: 40px;
+    }
 }
 
 .btn {
-	@btn-height: 60px;
-	color: #fff;
-	font-size: 28px;
-	height: 60px;
-	line-height: @btn-height;
-	border: 1px solid #fff;
-	border-radius: @btn-height / 2;
-	text-decoration: none;
-	display: inline-block;
-	padding-left: 80px;
-	position: relative;
-	width: 234px;
-	transition: background-color .3s;
-	&:hover {
-		background: rgba(255, 255, 255, .3);
-		transition: background-color .3s;
-	}
-	.icon {
-		width: 40px;
-		height: 40px;
-		display: block;
-		content: '';
-		position: absolute;
-		left: 20px;
-		top: 10px;
-	}
-	.icon-android {
-		background: url(../images/android.png);
-	}
-	.icon-ios {
-		background: url(../images/ios.png);
-	}
+    @btn-height: 60px;
+    color: #fff;
+    font-size: 28px;
+    height: 60px;
+    line-height: @btn-height;
+    border: 1px solid #fff;
+    border-radius: @btn-height / 2;
+    text-decoration: none;
+    display: inline-block;
+    padding-left: 80px;
+    position: relative;
+    width: 234px;
+    transition: background-color .3s;
+    &:hover {
+        background: rgba(255, 255, 255, .3);
+        transition: background-color .3s;
+    }
+    .icon {
+        width: 40px;
+        height: 40px;
+        display: block;
+        content: '';
+        position: absolute;
+        left: 20px;
+        top: 10px;
+    }
+    .icon-android {
+        background: url(../images/android.png);
+    }
+    .icon-ios {
+        background: url(../images/ios.png);
+    }
 }
 .btn-ios {
-	margin-top: 36px;
+    margin-top: 36px;
 }
 #page2 .poster {
-	background-image: url(../images/poster2.jpg);
+    background-image: url(../images/poster2.jpg);
 }
 #page3 .poster {
-	background-image: url(../images/poster3.jpg);
+    background-image: url(../images/poster3.jpg);
 }
 #page4 .poster {
-	background-image: url(../images/poster4.jpg);
+    background-image: url(../images/poster4.jpg);
 }
 #page5 .poster {
-	background-image: url(../images/poster5.jpg);
+    background-image: url(../images/poster5.jpg);
 }
-.sec {
-	height: 100%;
-	width: 100%;
-	margin: 0 auto;
-	overflow: hidden;
-	.poster-wrapper {
-		width: @poster-width;
-		height: 100%;
-		overflow: hidden;
-		position: relative;
-		.poster {
-			position: absolute;
-			top: -@poster-offset / 2;
-			left: -@poster-offset / 2;
-			width: 100% + @poster-offset;
-			height: 100% + @poster-offset;
-			background-repeat: no-repeat;
-			background-position: 100% center;
-			background-size: auto 100%;
-			filter: blur(0);
-			transition: all .6s ease-in-out;
-		}
+.section {
+    width: 100%;
+    height: 100%;
+    margin: 0 auto;
+    overflow: hidden;
+    .poster-wrapper {
+        width: @poster-width;
+        height: 100%;
+        overflow: hidden;
+        position: relative;
+        .poster {
+            position: absolute;
+            top: -@poster-offset / 2;
+            left: -@poster-offset / 2;
+            width: 100% + @poster-offset;
+            height: 100% + @poster-offset;
+            background-repeat: no-repeat;
+            background-position: 100% center;
+            background-size: auto 100%;
+            filter: blur(0);
+            transition: all .6s ease-in-out;
+        }
 
-	}
-	.content {
-		position: relative;
-		width: 100% - @poster-width;
-		height: 100%;
-	}
-	.phone {
-		display: block;
-		width: @phone-width;
-		height: @phone-height;
-		position: absolute;
-		top: 50%;
-		margin-top: -@phone-height / 2;
-	}
-	.intro {
-		width: @intro-width;
-		height: @intro-height;
-		position: absolute;
-		top: 50%;
-		margin-top: -@intro-height / 2;
-	}
-	.hd {
-		font-size: 40px;
-		line-height: 1.5;
-		color: #ff7327;
-		font-weight: normal;
-	}
-	.bd {
-		padding-top: 12px;
-		font-size: 20px;
-		line-height: 2;
-		color: #897056;
-	}
-	&.sec-anim {
-		.poster {
-			filter: blur(4px);
-		}
-	}
+    }
+    .content {
+        position: relative;
+        width: 100% - @poster-width;
+        height: 100%;
+    }
+    .phone {
+        display: block;
+        width: @phone-width;
+        height: @phone-height;
+        position: absolute;
+        top: 50%;
+        margin-top: -@phone-height / 2;
+    }
+    .intro {
+        width: @intro-width;
+        height: @intro-height;
+        position: absolute;
+        top: 50%;
+        margin-top: -@intro-height / 2;
+    }
+    .hd {
+        font-size: 40px;
+        line-height: 1.5;
+        color: #ff7327;
+        font-weight: normal;
+    }
+    .bd {
+        padding-top: 12px;
+        font-size: 20px;
+        line-height: 2;
+        color: #897056;
+    }
+    &.section-anim {
+        .poster {
+            filter: blur(4px);
+        }
+    }
 }
 
 #page5 {
-	.btn-group {
-		margin-top: 40px;
-	}
-	.btn {
-		color: #ff7327;
-		border-color: #ff7327;
-		.icon-ios {
-			background-image: url(../images/ios_orange.png);
-		}
-		.icon-android {
-			background-image: url(../images/android_orange.png);
-		}
-		&:hover {
-			background: rgba(255, 115, 39, .3);
-		}
-	}
-	.intro {
-		height: 460px;
-		margin-top: -230px;
-	}
+    .phone {
+        margin-top: -@phone-height / 2 - 30px;
+    }
+    .btn-group {
+        margin-top: 40px;
+    }
+    .btn {
+        color: #ff7327;
+        border-color: #ff7327;
+        .icon-ios {
+            background-image: url(../images/ios_orange.png);
+        }
+        .icon-android {
+            background-image: url(../images/android_orange.png);
+        }
+        &:hover {
+            background: rgba(255, 115, 39, .3);
+        }
+    }
+    .intro {
+        height: 460px;
+        margin-top: -260px;
+    }
 }
 
-.sec-poster-on-left {
-	.poster-wrapper, .content {
-		float: left;
-	}
-	.phone {
-		left: @phone-margin + @phone-anim-distance;
-		transition: left .4s;
-		
-	}
-	.intro {
-		left: @phone-margin + @phone-width + @intro-margin + @intro-anim-distance;
-		transition: left .4s ease-in-out;
-	}
+.section-poster-on-left {
+    .poster-wrapper, .content {
+        float: left;
+    }
+    .phone {
+        left: @phone-margin + @phone-anim-distance;
+        transition: left .4s;
+        
+    }
+    .intro {
+        left: @phone-margin + @phone-width + @intro-margin + @intro-anim-distance;
+        transition: left .4s ease-in-out;
+    }
 }
 
-.sec-poster-on-right {
-	.poster-wrapper, .content {
-		float: right;
-	}
-	.phone {
-		right: @phone-margin + @phone-anim-distance;
-		transition: right .4s;
-	}
-	.intro {
-		right: @phone-margin + @phone-width + @intro-margin + @intro-anim-distance;
-		transition: right .4s ease-in-out;
-	}
+.section-poster-on-right {
+    .poster-wrapper, .content {
+        float: right;
+    }
+    .phone {
+        right: @phone-margin + @phone-anim-distance;
+        transition: right .4s;
+    }
+    .intro {
+        right: @phone-margin + @phone-width + @intro-margin + @intro-anim-distance;
+        transition: right .4s ease-in-out;
+    }
 }
 
-.no-csstransitions .sec-poster-on-left,
-.sec-poster-on-left.sec-anim {
-	.phone {
-		left: @phone-margin;
-	}
-	.intro {
-		left: @phone-margin + @phone-width + @intro-margin;
-	}
+.no-csstransitions .section-poster-on-left,
+.section-poster-on-left.section-anim {
+    .phone {
+        left: @phone-margin;
+    }
+    .intro {
+        left: @phone-margin + @phone-width + @intro-margin;
+    }
 }
 
-.no-csstransitions .sec-poster-on-right,
-.sec-poster-on-right.sec-anim {
-	.phone {
-		right: @phone-margin;
-	}
-	.intro {
-		right: @phone-margin + @phone-width + @intro-margin;
-	}
+.no-csstransitions .section-poster-on-right,
+.section-poster-on-right.section-anim {
+    .phone {
+        right: @phone-margin;
+    }
+    .intro {
+        right: @phone-margin + @phone-width + @intro-margin;
+    }
 }
 
 #footer {
-	@footer-height: 90px;
-	@qrcode-width: 150px;
-	@qrcode-height: 150px;
-	@weixin-height: 30px;
-	@arrow-width: 16px;
-	@arrow-height: 16px;
-	height: @footer-height;
-	width: 100%;
-	color: #fff;
-	text-align: center;
-	background-color: #3a3a3a;
-	h1, .copy, .weixin, .weibo {
-		display: inline-block;
-		font-weight: normal;
-		margin-right: 20px;
-	}
-	h1 {
-		font-size: @weixin-height;
-		line-height: @footer-height;
-	}
-	.copy {
-		font-size: 12px;
-		line-height: 1.4;
-		text-align: left;
-		position: relative;
-		top: 4px;
-	}
-	.weixin, .weibo {
-		color: #fff;
-		font-size: @weixin-height;
-		transition: color .3s;
-		position: relative;
-		&:hover {
-			color: #9e9e9e;
-		}
-	}
-	.weixin {
-		.qrcode {
-			display: none;
-			position: absolute;
-			width: @qrcode-width;
-			height: @qrcode-height;
-			border: 1px solid #f95801; 
-			top: -@qrcode-width - @arrow-height;
-			left: -(@qrcode-height - @weixin-height) / 2;
-			&:after {
-				content: '';
-				display: block;
-				width: @arrow-width;
-				height: @arrow-height;
-				position: absolute;
-				bottom: -@arrow-height;
-				left: 50%;
-				margin-left: -@arrow-width / 2;
-				background: no-repeat url(../images/arrow.png) 0 0;
-				background-size: @arrow-width @arrow-height;
-			}
-		}
-		&:hover {
-			.qrcode {
-				display: block;
-			}
-		}
-	}
+    @footer-height: 60px;
+    @qrcode-width: 150px;
+    @qrcode-height: 150px;
+    @weixin-height: 30px;
+    @arrow-width: 16px;
+    @arrow-height: 16px;
+    height: @footer-height;
+    width: 100%;
+    color: #fff;
+    position: absolute;
+    bottom: 0;
+    text-align: center;
+    background-color: #3a3a3a;
+    h1, .copy, .weixin, .weibo {
+        display: inline-block;
+        font-weight: normal;
+        margin-right: 20px;
+    }
+    h1 {
+        font-size: @weixin-height;
+        line-height: @footer-height;
+    }
+    .copy {
+        font-size: 12px;
+        line-height: 1.4;
+        text-align: left;
+        position: relative;
+        top: 4px;
+    }
+    .weixin, .weibo {
+        color: #fff;
+        font-size: @weixin-height;
+        transition: color .3s;
+        position: relative;
+        &:hover {
+            color: #9e9e9e;
+        }
+    }
+    .weixin {
+        .qrcode {
+            display: none;
+            position: absolute;
+            width: @qrcode-width;
+            height: @qrcode-height;
+            border: 1px solid #f95801; 
+            top: -@qrcode-width - @arrow-height;
+            left: -(@qrcode-height - @weixin-height) / 2;
+            &:after {
+                content: '';
+                display: block;
+                width: @arrow-width;
+                height: @arrow-height;
+                position: absolute;
+                bottom: -@arrow-height;
+                left: 50%;
+                margin-left: -@arrow-width / 2;
+                background: no-repeat url(../images/arrow.png) 0 0;
+                background-size: @arrow-width @arrow-height;
+            }
+        }
+        &:hover {
+            .qrcode {
+                display: block;
+            }
+        }
+    }
 }
