--- a/piaofanzi/mobile/less/index.less
+++ b/piaofanzi/mobile/less/index.less
@@ -221,6 +221,45 @@ footer {
     }
 }
 
+.qrcode {
+    @qrcode-width: 160px;
+    @qrcode-height: 160px;
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    .qrcode-bg {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        background: rgba(0, 0, 0, .6);
+    }
+    .qrcode-inner {
+        display: block;
+        width: @qrcode-width;
+        height: @qrcode-height;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        margin-left: -@qrcode-width / 2;
+        margin-top: -@qrcode-height / 2;
+    }
+    img {
+        display: block;
+        width: @qrcode-width;
+        height: @qrcode-height;
+    }
+    p {
+        font-size: 18px;
+        line-height: 200%;
+        width: 100%;
+        text-align: center;
+        color: #fff;
+    }
+}
+
 @-webkit-keyframes before_fade_in {
     0% {
         opacity: 0;
