--- a/piaofanzi/mobile/less/index.less
+++ b/piaofanzi/mobile/less/index.less
@@ -222,8 +222,8 @@ footer {
 }
 
 .qrcode {
-    @qrcode-width: 160px;
-    @qrcode-height: 160px;
+    @qrcode-width: 140px;
+    @qrcode-height: 140px;
     display: none;
     position: fixed;
     top: 0;
@@ -244,7 +244,7 @@ footer {
         top: 50%;
         left: 50%;
         margin-left: -@qrcode-width / 2;
-        margin-top: -@qrcode-height / 2;
+        margin-top: -@qrcode-height / 2 - 60px;
     }
     img {
         display: block;
